--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: Arnav Vasudev (ECE 4160)   
-subtitle: Building a robot
+title: Arnav Vasudev  
+subtitle: Building an autonomous robot
 show-avatar: false
 ---
